--- a/web/app/themes/made/fbmods/sass/helpers/_variables.scss
+++ b/web/app/themes/made/fbmods/sass/helpers/_variables.scss
@@ -6,6 +6,7 @@ $white: #fff;
 $blue: #02bed6;
 $gold: #fdbb30;
 $gray: rgb(135,135,135);
+$gray-dark: #707070;
 
 // Brand Swatches
 $brand-primary: $black;
